<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="team10.cst438.sl_time_tracker_plus.Menus.AdministratorMenuActivity">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/viewTimesheet"
        android:id="@+id/viewTimesheetButton"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/editTimesheetButton"
        android:id="@+id/editButton"
        android:layout_below="@+id/viewTimesheetButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/viewTimesheetButton"
        android:layout_alignEnd="@+id/viewTimesheetButton" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/createTimesheetButton"
        android:layout_below="@+id/editButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/editButton"
        android:layout_alignEnd="@+id/editButton"
        android:text="@string/createTimesheet" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/deleteTimesheetButton"
        android:layout_below="@+id/createTimesheetButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/createTimesheetButton"
        android:layout_alignEnd="@+id/createTimesheetButton"
        android:text="@string/deleteTimesheet" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/createUser"
        android:id="@+id/createUserButton"
        android:layout_below="@+id/deleteTimesheetButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/deleteTimesheetButton"
        android:layout_alignEnd="@+id/deleteTimesheetButton" />
</RelativeLayout>
